--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "hi nodejs",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
+    "debug": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +24,8 @@
   "homepage": "https://github.com/nchanh/HiNodeJS#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
