feat: Add Template Engine

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hinode",
   "version": "1.0.0",
   "description": "hi nodejs",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "debug": "nodemon --inspect index.js",
+    "start": "nodemon src/index.js",
+    "debug": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,10 +24,11 @@
   },
   "homepage": "https://github.com/nchanh/HiNodeJS#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   }
 }
