--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
+    "watch": "node-sass -w src/resource/scss/ -o src/public/css/",
     "debug": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
+    "node-sass": "^7.0.1",
     "nodemon": "^1.3.3"
   }
 }
